fix underline spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ p {
 .info-btn {
   border-bottom: 2px solid black;
   font-size: 40px;
-  line-height: 24px;
+  line-height: 26px;
   position: absolute;
   right: 24px;
   text-decoration: none;
